--- a/index.html
+++ b/index.html
@@ -1,17 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>www.myfirstweb.com</title>
-<h1><strong><u>INTRODUCTION</u></strong></h1>
+	<title>My Simple Website</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+
+		header {
+			background-color: #333;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+
+		nav {
+			background-color: #333;
+			color: #fff;
+			padding: 10px;
+		}
+
+		nav ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: center;
+		}
+
+		nav li {
+			margin: 0 10px;
+		}
+
+		nav a {
+			color: #fff;
+			text-decoration: none;
+		}
+
+		section {
+			padding: 20px;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-<p><strong><font color="sky blue">I am Sourav Kumar Dey.I am from Banagram, P.O. Nutandanga, Paschim Bardhaman, Pin-713381.<br><ul>My Hobby
-    <li>Playing games</li>
-</ul> </strong></p></font>
-<h4><strong>Favourite Food</strong></h4>
-<ol>
-    <li>Icecream</li>
-    <li>Pizza</li>
-</ol>
+	<header>
+		<h1>Welcome To My Website!</h1>
+	</header>
+
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+
+	<section>
+		<h2>About Me</h2>
+		<p>Hi there! My name is Sourav Kumar Dey and I'm a Web Developer.</p>
+		<p>My favorite programming languages are HTML, CSS, JavaScript, Java</p>
+	</section>
 </body>
 </html>
